--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -99,3 +99,58 @@ body {
     align-self: center;
     margin: 2rem;
     padding: 1rem;}
+
+    .secondary-color {
+        color: #c271ff;
+      }
+      .pros {
+        padding: 2%;
+        display: flex;
+        flex-direction: column;
+      }
+      .pros-title {
+        position: relative;
+        align-self: center;
+        padding: 2rem;
+        font-weight: 300;
+        line-height: 40px;
+      }
+      .pros-title .secondary-color {
+        font-weight: 700;
+      }
+      .pros-block {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+      }
+      .pros-card {
+        width: 19%;
+        /* padding: 1.5% 4% 1.5% 4%;*/
+        margin-bottom: 7rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      .pros img {
+        border-radius: 50%;
+        max-width: 80%;
+      }
+      .pros-card h3 {
+        font-weight: 900;
+        font-size: 18px;
+        margin-top: 0.2rem;
+        margin-bottom: 0.2rem;
+        text-align: center;
+      }
+      .pros-card p {
+        font-style: italic;
+        text-align: center;
+        font-size: 16px;
+      }
+      main {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin: -8px;
+      }
