--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -154,3 +154,41 @@ body {
         flex-direction: column;
         margin: -8px;
       }
+      .presenter-section {
+        /* position: absolute; */
+        background-color: #c271ff;
+        padding: 6%;
+      }
+      .presenter-block {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        padding-left: 9%;
+        padding-right: 9%;
+      }
+      .presenter-block img {
+        width: 160px;
+        height: 160px;
+        margin-right: 3rem;
+      }
+      .presenter-block blockquote {
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 34px;
+        margin-left: 0;
+      }
+      .presenter-block .person-name {
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 34px;
+        margin-bottom: 0;
+      }
+      .presenter-block .weather {
+        font-style: italic;
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 34px;
+        margin-top: 0;
+      }
