--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -192,3 +192,70 @@ body {
         line-height: 34px;
         margin-top: 0;
       }
+
+      .video-section{
+        justify-content: center;
+        align-self: center;
+        display: flex;
+        flex-direction: column;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+
+      }  
+      .video-section h1{
+        text-align: center;
+        font-size: 40px;
+        font-weight: 300;
+        padding-top: 1rem;
+        padding-bottom: 2rem;
+       
+      }
+
+      .video-container{
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+        
+     }
+
+      .video{
+        padding: 3rem;
+        /* display: flex;
+        flex-direction: column; */
+        max-width: 15%;
+        align-content: center;
+      }
+
+      .video h2, p{
+      }
+
+      .author-picture{
+        border-radius:100%;
+      }
+      .video-author{
+        display: flex;
+        flex-direction: row;
+        flex: auto;
+      }
+      .video-author h3{
+        font-size: medium;
+        /* padding: auto; */
+        margin: auto;
+        margin-left: 15px;
+      }
+
+      .video-author img{
+        height: 10%;
+        width: 10%;
+      }
+      .rating-duration{
+         display: flex;
+        flex-direction: row;
+        flex: auto;
+      }
+
+      .duration{
+        margin: auto;
+        align-content: end
+
+      }
