--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -259,3 +259,41 @@ body {
         align-content: end
 
       }
+      .membership-section {
+        color: white;
+        background: #071629;
+        padding: 2rem;
+      }
+      .membership-section .secondary-color,
+      .videos-section .secondary-color {
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 40px;
+        text-align: center;
+      }
+      .membership-section h1 {
+        font-weight: 300;
+        font-size: 32px;
+        line-height: 40px;
+        text-align: center;
+        padding-bottom: 2rem;
+      }
+      .membership-section button {
+        left: 42%;
+      }
+      .memberships {
+        display: flex;
+        justify-content: space-evenly;
+        padding-left: 5rem;
+        padding-right: 5rem;
+      }
+      .membership-card {
+        display: flex;
+        flex-direction: column;
+        max-width: 12%;
+        align-items: center;
+        text-align: center;
+      }
+      .membership-card h2 {
+        margin-bottom: 0.1rem;
+      }
