--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -297,3 +297,43 @@ body {
       .membership-card h2 {
         margin-bottom: 0.1rem;
       }
+      .faq-list {
+        display: flex;
+        padding-left: 10%;
+        padding-right: 10%;
+      }
+      .faq-item {
+        display: flex;
+        flex: 50%;
+        flex-direction: column;
+        width: 50%;
+        padding: 5%;
+      }
+      footer {
+        background: black;
+        padding: 1rem;
+        margin: -8px;
+      }
+      .ft-container {
+        display: flex;
+        flex-direction: column;
+      }
+      .nav-ft {
+        display: flex;
+        justify-content: space-between;
+        padding: 4rem 8rem 4rem 8rem;
+      }
+      
+      .nav-ft div a {
+        margin-left: 0.4rem;
+        margin-right: 0.5rem;
+      }
+      
+      .ft-container p {
+        color: white;
+        opacity: 0.35;
+        text-align: center;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px;
+      }
