--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Source Sans Pro";
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: normal;
   }
 
@@ -81,9 +81,8 @@ body {
     position: relative;
     margin-top: -7%;
     text-align: center;
-    font-weight: bolder;
+    font-weight: 900;
     font-size: 16px;
-    line-height: 20px;
     color: #ffffff;
     display: flex;
     justify-content: space-around;
@@ -284,21 +283,19 @@ body {
       .videos-section .secondary-color {
         font-weight: 700;
         font-size: 32px;
-        line-height: 40px;
         text-align: center;
       }
       .membership-section h1 {
         font-weight: 300;
         font-size: 32px;
-        line-height: 40px;
         text-align: center;
         padding-bottom: 2rem;
       }
       .membership-section button {
-        left: 42%;
-      }
+        left: 42%;      }
       .memberships {
         display: flex;
+        flex-direction: row;
         justify-content: space-evenly;
         padding-left: 5rem;
         padding-right: 5rem;
@@ -306,13 +303,20 @@ body {
       .membership-card {
         display: flex;
         flex-direction: column;
-        max-width: 12%;
+        max-width: 15%;
         align-items: center;
         text-align: center;
       }
       .membership-card h2 {
         margin-bottom: 0.1rem;
       }
+
+      .faq-section{
+        display: flex;
+        flex-direction: column;
+        flex: auto;
+      }
+      
       .faq-list {
         display: flex;
         padding-left: 10%;
@@ -330,11 +334,21 @@ body {
         display: flex;
         flex: 50%;
         flex-direction: column;
-        width: 50%;
-        padding: 5%;
+        max-width: 35%;
+        padding-left: 5%;
+        padding-bottom: 5%;
+        margin: auto;
+        justify-content: space-evenly;
       }
+
+      .faq-item p{
+        font-weight: 400;
+        opacity: 30%;
+        line-height: 30px;
+      }
+
       footer {
-        background: black;
+        background: rgb(2, 14, 27);
         padding: 1rem;
         margin: -8px;
       }
